-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8u191, 11.0.1, 12
-
Component/s: client-libs
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8214486 | 11.0.3-oracle | Dmitry Markov | P2 | Closed | Fixed | master |
| JDK-8219380 | 11.0.3 | Dmitry Markov | P2 | Resolved | Fixed | master |
| JDK-8219596 | openjdk8u212 | Paul Hohensee | P2 | Resolved | Fixed | b01 |
| JDK-8221636 | 8u221 | Dmitry Markov | P2 | Resolved | Fixed | b02 |
| JDK-8215860 | 8u212 | Dmitry Markov | P2 | Resolved | Fixed | b01 |
| JDK-8214487 | 8u211 | Dmitry Markov | P2 | Closed | Fixed | b01 |
| JDK-8217681 | 8u202 | Dmitry Markov | P2 | Closed | Fixed | b32 |
| JDK-8224412 | emb-8u221 | Dmitry Markov | P2 | Resolved | Fixed | b02 |
| JDK-8220979 | emb-8u211 | Dmitry Markov | P2 | Resolved | Fixed | master |
| JDK-8240509 | 7u271 | Dmitry Markov | P2 | Closed | Fixed | b01 |
JFilechooser, an error is thrown saying that the shortcut is bad even though JFilechooser was not instructed
to look at the Desktop.
- backported by
-
JDK-8215860 Error while opening the JFileChooser when desktop contains shortcuts pointing to deleted files
-
- Resolved
-
-
JDK-8219380 Error while opening the JFileChooser when desktop contains shortcuts pointing to deleted files
-
- Resolved
-
-
JDK-8219596 Error while opening the JFileChooser when desktop contains shortcuts pointing to deleted files
-
- Resolved
-
-
JDK-8220979 Error while opening the JFileChooser when desktop contains shortcuts pointing to deleted files
-
- Resolved
-
-
JDK-8221636 Error while opening the JFileChooser when desktop contains shortcuts pointing to deleted files
-
- Resolved
-
-
JDK-8224412 Error while opening the JFileChooser when desktop contains shortcuts pointing to deleted files
-
- Resolved
-
-
JDK-8214486 Error while opening the JFileChooser when desktop contains shortcuts pointing to deleted files
-
- Closed
-
-
JDK-8214487 Error while opening the JFileChooser when desktop contains shortcuts pointing to deleted files
-
- Closed
-
-
JDK-8217681 Error while opening the JFileChooser when desktop contains shortcuts pointing to deleted files
-
- Closed
-
-
JDK-8240509 Error while opening the JFileChooser when desktop contains shortcuts pointing to deleted files
-
- Closed
-
- duplicates
-
JDK-8213595 Error while opening the JFileChooser with linkage problem
-
- Closed
-
-
JDK-8214048 An error occurs when I try to open a file dialog with javax.Swing.JFileChooser
-
- Closed
-
-
JDK-8214049 Before the file open dialog opens one or more error dialog boxes are displayed
-
- Closed
-
-
JDK-8214178 JFileChooser on Windows causes broken link messages when a SecurityManager is defined
-
- Closed
-
-
JDK-8214924 "Problem with Shortcut" popup when using JFileChooser
-
- Closed
-
-
JDK-8214420 JFileChooser causes broken link messages
-
- Closed
-
-
JDK-8216409 Java errors when attaching/uploading docs using Lawson/WebNow
-
- Closed
-
-
JDK-8223683 JFileChooser sometimes calls native API which shows native modal dialogs
-
- Closed
-
-
JDK-8222521 Error while opening the JFileChooser when desktop contains shortcuts pointing to
-
- Closed
-
- relates to
-
JDK-8222521 Error while opening the JFileChooser when desktop contains shortcuts pointing to
-
- Closed
-
-
JDK-8261822 JFileChooser does not work if Windows 10 desktop directory is missing
-
- Open
-
-
JDK-8265446 JFileChooser slow with network shortcut on desktop
-
- Closed
-
-
JDK-8268731 Slow opening of the JFileChooser when desktop contains broken lnk file
-
- Closed
-