8213583: Error while opening the JFileChooser when desktop contains shortcuts pointing to deleted files

Reviewed-by: kaddepalli, aivanov, serb